@@ -122,17 +122,36 @@
 	{
 		if(isset($HTTP_GET_VARS["trendavg"]))
 		{
-//			echo "<IMG SRC=\"trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."&trendavg=1\">";
 			echo "<script language=\"JavaScript\">";
-			echo "document.write(\"<IMG SRC='trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."&trendavg=1&width=\"+(document.width-108)+\"'>\")";
+			echo "if (navigator.appName == \"Microsoft Internet Explorer\")";
+			echo "{";
+			echo " document.write(\"<IMG SRC='trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."&trendavg=1&width=\"+(document.body.clientWidth-108)+\"'>\")";
+			echo "}";
+			echo "else if (navigator.appName == \"Netscape\")";
+			echo "{";
+			echo " document.write(\"<IMG SRC='trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."&trendavg=1&width=\"+(document.width-108)+\"'>\")";
+			echo "}";
+			echo "else";
+			echo "{";
+			echo " document.write(\"<IMG SRC='trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."&trendavg=1'>\")";
+			echo "}";
 			echo "</script>";
-
 		}
 		else
 		{
-//			echo "<IMG SRC=\"trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."\">";
 			echo "<script language=\"JavaScript\">";
-			echo "document.write(\"<IMG SRC='trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."&width=\"+(document.width-108)+\"'>\")";
+			echo "if (navigator.appName == \"Microsoft Internet Explorer\")";
+			echo "{";
+			echo " document.write(\"<IMG SRC='trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."&width=\"+(document.body.clientWidth-108)+\"'>\")";
+			echo "}";
+			echo "else if (navigator.appName == \"Netscape\")";
+			echo "{";
+			echo " document.write(\"<IMG SRC='trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."&width=\"+(document.width-108)+\"'>\")";
+			echo "}";
+			echo "else";
+			echo "{";
+			echo " document.write(\"<IMG SRC='trend.php?itemid=".$HTTP_GET_VARS["itemid"]."&type=".$HTTP_GET_VARS["type"]."'>\")";
+			echo "}";
 			echo "</script>";
 		}
 	}
